<resources>
    <string name="app_name">MyTrivia</string>
    <string name="categories">Categories</string>
    <string name="back_button">Go Back</string>
    <string name="game">Game</string>
    <string name="history">History</string>
    <string name="confirm">Confirm</string>
    <string name="gamescreen_question_counter">Question %1$s/%2$s</string>
    <string name="gamescreen_score">Score: %1$s</string>
    <string name="next">Next</string>
    <string name="game_over">Game Finished</string>
    <string name="final_score">You scored %1$s points!</string>
    <string name="retry">Retry</string>
    <string name="no_history_items_available">No history items available</string>
    <string name="add_category">Add Category</string>
    <string name="category_name_cannot_be_empty">Category name cannot be empty</string>
    <string name="please_select_an_icon">Please select an icon</string>
    <string name="select_icon">SELECT ICON</string>
    <string name="category_name">Category Name</string>
    <string name="category_information">CATEGORY INFORMATION</string>
    <string name="no_categories_available">No categories available</string>
    <string name="unknown_error" />
    <string name="error">Error has occured</string>
    <string name="no_questions_found">No questions found for this category\n</string>
    <string name="category_added_successfully">Category has been created!</string>
    <string name="without_internet_connection_you_can_t_perform_this_action">Without internet connection you can\'t perform this action</string>
    <string name="using_local_data">Offline data</string>
    <string name="add_category_button">Add Category Button</string>
</resources>